--- a/src/gui/Department.fxml
+++ b/src/gui/Department.fxml
@@ -1,20 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<VBox xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1">
+<VBox prefHeight="318.0" prefWidth="452.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label prefHeight="275.0" prefWidth="427.0" text="Departments">
+      <Label text="Department Registration">
          <font>
-            <Font name="Arial Black" size="23.0" />
+            <Font name="Arial Bold" size="18.0" />
          </font>
          <padding>
-            <Insets bottom="220.0" left="10.0" />
+            <Insets left="5.0" top="5.0" />
          </padding>
       </Label>
+      <ToolBar prefHeight="40.0" prefWidth="200.0">
+        <items>
+          <Button mnemonicParsing="false" text="New" />
+        </items>
+      </ToolBar>
+      <TableView prefHeight="200.0" prefWidth="200.0">
+        <columns>
+          <TableColumn prefWidth="75.0" text="Id" />
+          <TableColumn prefWidth="75.0" text="Name" />
+        </columns>
+      </TableView>
    </children>
 </VBox>
