--- a/src/gui/About.fxml
+++ b/src/gui/About.fxml
@@ -6,19 +6,19 @@
 <?import javafx.scene.text.Font?>
 
 
-<VBox prefHeight="256.0" prefWidth="334.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1">
+<VBox prefHeight="204.0" prefWidth="352.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.1">
    <children>
       <Label text="About">
          <font>
-            <Font name="Arial Black" size="18.0" />
+            <Font name="System Bold" size="18.0" />
          </font>
          <padding>
             <Insets bottom="10.0" left="20.0" top="10.0" />
          </padding>
       </Label>
-      <Label text="JavaFX Aplication Demo">
+      <Label text="JavaFX application demo">
          <padding>
-            <Insets left="10.0" />
+            <Insets left="20.0" />
          </padding>
       </Label>
    </children>
